# gdnative-doc-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  configuration_file-format.md
.github/workflows/: run_tests.yml
example/: Interface.md  config.toml  lib.rs
example/dijkstra-map-gd/: Cargo.toml  LICENSE  README.md  build.rs  config.toml
example/dijkstra-map-gd/doc/html/: DijkstraMap.html  index.html
example/dijkstra-map-gd/doc/markdown/: DijkstraMap.md  Interface.md  index.md
example/dijkstra-map-gd/src/: lib.rs
example/doc/: Interface.html  Interface.md  index.html  index.md
example/doc/html/: DijkstraMap.html  index.html
example/doc/markdown/: DijkstraMap.md  Interface.md  index.md
example/gut/: DijkstraMap.gd
examples/dijkstra-map-gd/: Cargo.toml  README.md  build.rs  config.toml
examples/dijkstra-map-gd/doc/html/: DijkstraMap.html  index.html  prism.css  prism.js  style.css
examples/dijkstra-map-gd/doc/markdown/: DijkstraMap.md  index.md
examples/dijkstra-map-gd/gut/: DijkstraMap.gd
examples/dijkstra-map-gd/src/: lib.rs
fetch_godot_classes/: fetch_godot_classes.py  godot_classes  godot_classes-3.2.txt  godot_classes-3.3.txt  godot_classes-3.4.txt  godot_classes-3.5.txt
gdnative-doc/: Cargo.toml
gdnative-doc-cli/: Cargo.toml  README.md
gdnative-doc-cli/src/: main.rs
gdnative-doc/src/: builder.rs  config.rs  documentation.rs  files.rs  lib.rs
gdnative-doc/src/backend/: config.rs  gut.rs  html.rs  markdown.rs  mod.rs  resolve.rs
html/: README.md  prism.css  prism.js
src/: builder.rs  config.rs  documentation.rs  files.rs  helpers.rs  lib.rs  main.rs  to_markdown.rs  vfs.rs
src/backend/: callbacks.rs  config.rs  gut.rs  html.rs  markdown.rs  mod.rs  resolve.rs
src/backend/markdown/: mod.rs  tests.rs
src/backend/markdown/snapshots/: gdnative_doc__backend__markdown__tests__bullet_list.snap  gdnative_doc__backend__markdown__tests__code_text.snap  gdnative_doc__backend__markdown__tests__complicated_list.snap  gdnative_doc__backend__markdown__tests__new_paragraph.snap  gdnative_doc__backend__markdown__tests__numbered_list.snap  gdnative_doc__backend__markdown__tests__quotes_and_lists.snap  gdnative_doc__backend__markdown__tests__simple_code.snap  gdnative_doc__backend__markdown__tests__simple_code_block.snap  gdnative_doc__backend__markdown__tests__simple_quote.snap  gdnative_doc__backend__markdown__tests__simple_text.snap  gdnative_doc__backend__markdown__tests__various_text_emphasis.snap
src/documentation/: builder.rs  helpers.rs  mod.rs
