[package]
name = "gdnative-doc"
version = "0.0.1"
description = "Documentation tool for gdnative"
authors = ["Arnaud Golfouse <arnaud.golfouse@laposte.net>"]
repository = "https://github.com/arnaudgolfouse/gdnative-doc-rs/"
readme = "README.md"
edition = "2018"
license = "MIT"

[workspace]
members = ["gdnative-doc-cli"]
default-members = ["gdnative-doc-cli"]
exclude = ["example"]

[dependencies]
cargo_metadata = "0.12"
log = { version = "0.4", features = ["std"] }
pulldown-cmark = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
simplelog = "0.9"
syn = { version = "1.0", default-features = false, features = ["parsing", "full", "visit"] }
thiserror = "1.0"
toml = "0.5"

# Make toml config parsing optional ?
#[features]
#default = ["toml"]

[profile.release]
lto = true
