[package]
name = "gdnative-doc"
version = "0.0.4"
description = "Documentation tool for gdnative"
authors = ["Arnaud Golfouse <arnaud.golfouse@laposte.net>"]
repository = "https://github.com/arnaudgolfouse/gdnative-doc-rs/"
readme = "README.md"
edition = "2018"
license = "MIT"

[workspace]
members = ["gdnative-doc-cli", "examples/dijkstra-map-gd"]
default-members = [".", "gdnative-doc-cli"]

[dependencies]
cargo_metadata = "0.13"
log = { version = "0.4", features = ["std"] }
pulldown-cmark = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
simplelog = { version = "0.10", optional = true }
syn = { version = "1.0", default-features = false, features = ["parsing", "full", "visit"] }
thiserror = "1.0"
toml = "0.5"

[dev-dependencies]
insta = "1.6.3"
gdnative = "0.9"

[features]
default = ["simplelog"]

[profile.release]
lto = true
