[package]
name = "gdnative-doc"
version = "0.0.5"
description = "Documentation tool for gdnative"
authors = ["Arnaud Golfouse <arnaud.golfouse@laposte.net>"]
repository = "https://github.com/arnaudgolfouse/gdnative-doc-rs/"
readme = "README.md"
edition = "2018"
license = "MIT"

[workspace]
members = ["gdnative-doc-cli", "examples/dijkstra-map-gd"]
default-members = [".", "gdnative-doc-cli"]

[dependencies]
cargo_metadata = "0.15.0"
log = { version = "0.4.17", features = ["std"] }
pulldown-cmark = { version = "0.9.2", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
simplelog = { version = "0.12.0", optional = true }
syn = { version = "1.0.102", default-features = false, features = [
	"parsing",
	"full",
	"visit",
] }
thiserror = "1.0.37"
toml = "0.5.9"

[dev-dependencies]
insta = "1.21.0"
gdnative = "0.11.0"

[features]
default = ["simplelog"]

[profile.release]
lto = true
