[package]
name = "gdnative-doc-cli"
version = "0.0.3"
description = "Command line utility for gdnative-doc"
authors = ["Arnaud Golfouse <arnaud.golfouse@laposte.net>"]
repository = "https://github.com/arnaudgolfouse/gdnative-doc-rs/"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
gdnative-doc = { path = "..", version = "0.0.3" }
clap = "2.33"
anyhow = "1.0"
